test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_types/use_file_scope_variable_as_fun.plx
#  This declares a global variable 
extrn foo: i32;

pub fn main(none) i32 {
    #  Treating a variable as a function is a type error. 
    return foo()
}
